# lipnet

./: .gitignore  README.md  data_generation.ipynb  generate_data.ipynb  generate_sweep_rerun_sbatch.py  pyproject.toml  sweep-agent.sh  sweep-controller.py  sweep_chaotic_systems.sbatch  sweep_chaotic_systems_ensemble.sbatch  sweep_chaotic_systems_mlp_lip.sbatch  train_mlp.py  utils.py
sweep_configs/: chaotic_systems.yaml  chaotic_systems_ensemble.yaml  chaotic_systems_mlp_lip.yaml
